...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coaster.android.coaster.views.fragments.DrinksFragment"
    android:background="#f1f1f1">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</FrameLayout>
