...
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </LinearLayout>


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ListView
...
