...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_margin="20dp"
        android:clickable="true"
        app:cardBackgroundColor="#282828"
        app:cardCornerRadius="12dp">
...
