...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vodka_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
...
